--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>MCLAREN FORMULA 1 RACING TEAM</h1>
         <nav>
-            <a href="page1.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="page2.html">Drivers</a>
         </nav>
     </header>
@@ -116,5 +116,6 @@
         <p>PAPAYA</p>
     </footer>
 </body>
+
 
 </html>
