--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
     <header>
         <h1>McLaren Drivers</h1>
         <nav>
-            <a href="page1.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="page2.html">Drivers</a>
         </nav>
     </header>
@@ -92,5 +92,6 @@
         <p>PAPAYA</p>
     </footer>
 </body>
+
 
 </html>
