--- a/page2.html
+++ b/page2.html
@@ -21,13 +21,13 @@
         <div class="images">
             <div>
                 <a href="https://en.wikipedia.org/wiki/Lando_Norris" target="_blank" title="know more">
-                    <img src="images/lando norris (2).jpeg" alt="Lando Norris">
+                    <img src="lando norris (2).jpeg" alt="Lando Norris">
                 </a>
                 <p>Lando Norris</p>
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Oscar_Piastri" target="_blank" title="know more">
-                    <img src="images/Oscar Piastri.jpeg" alt="Oscar Piastri">
+                    <img src="Oscar Piastri.jpeg" alt="Oscar Piastri">
                 </a>
                 <p>Oscar Piastri</p>
             </div>
@@ -37,28 +37,28 @@
         <div class="images">
             <div>
                 <a href="https://en.wikipedia.org/wiki/Ayrton_Senna" target="_blank" title="know more">
-                    <img src="images/F1.jpeg" alt="Ayrton Senna">
+                    <img src="F1.jpeg" alt="Ayrton Senna">
                 </a>
                 <p>Ayrton Senna</p>
 
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Lewis_Hamilton" target="_blank" title="know more">
-                    <img src="images/lewis hamilton.jpeg" height="300" alt="Lewis Hamilton">
+                    <img src="lewis hamilton.jpeg" height="300" alt="Lewis Hamilton">
                 </a>
                 <p>Lewis Hamilton</p>
 
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Fernando_Alonso" target="_blank" title="know more">
-                    <img src="images/Fernando Alonso McLaren.jpeg" alt="Fernando Alonso">
+                    <img src="Fernando Alonso McLaren.jpeg" alt="Fernando Alonso">
                 </a>
                 <p>Fernando Alonso</p>
 
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/James_Hunt" target="_blank" title="know more">
-                    <img src="images/James Hunt (England) won the 1976 Formula 1 World Championship driving for McLaren.jpeg"
+                    <img src="James Hunt (England) won the 1976 Formula 1 World Championship driving for McLaren.jpeg"
                         alt="James Hunt">
                 </a>
                 <p>James Hunt</p>
@@ -66,21 +66,21 @@
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Carlos_Sainz" target="_blank" title="know more">
-                    <img src="images/carlos.jpeg" alt="Carlos Sainz">
+                    <img src="carlos.jpeg" alt="Carlos Sainz">
                 </a>
                 <p>Carlos Sainz</p>
 
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Niki_Lauda" target="_blank" title="know more">
-                    <img src="images/niki lauda.jpeg" alt="Niki Lauda">
+                    <img src="niki lauda.jpeg" alt="Niki Lauda">
                 </a>
                 <p>Niki Lauda</p>
 
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Alain_Prost" target="_blank" title="know more">
-                    <img src="images/download (12).jpeg" alt="Alain Prost">
+                    <img src="download (12).jpeg" alt="Alain Prost">
                 </a>
                 <p>Alain Prost</p>
             </div>
@@ -95,3 +95,4 @@
 
 
 </html>
+
