--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li><i>The team as a whole is also leading the Constructors Championship with <b>623</b> points as of Baku
                     2025.</i></li>
         </ul>
-        <img src="images/lando norris & oscar piastri.jpeg" width="300" alt="Mclaren 2025 Miami GP"
+        <img src="landonorrisandoscarpiastri.jpeg" width="300" alt="Mclaren 2025 Miami GP"
             title="Mclaren 2025 Miami GP">
         <p>LANDO AND OSCAR AT MIAMI GP 2025</p>
         <hr>
@@ -60,7 +60,7 @@
                     mate Oscar Piastri scoring nine rostrums between them.</i></li>
             <li><i>The result is a rise to fourth overall in the constructors’ championship.</i></li>
         </ul>
-        <img src="McLaren Saudi Arabian GP 2023.jpeg" width="300" alt="Mclaren 2023 Saudi Arabian GP"
+        <img src="McLaren-Saudi-Arabian-GP-2023.jpeg" width="300" alt="Mclaren 2023 Saudi Arabian GP"
             title="Mclaren 2023 Saudi Arabian GP">
         <p>MCLAREN AT 2023 SAUDI ARABIAN GP</p>
         <hr>
@@ -72,7 +72,7 @@
             <li><i>Daniel Ricciardo fails to get to grips with the Mercedes-powered MCL36 and departs the team
                     at the end of season.</i></li>
         </ul>
-        <img src="Lando & Daniel.jpeg" width="300" title="lando and daniel 2021">
+        <img src="LandoandDaniel.jpeg" width="300" title="lando and daniel 2021">
         <p>Lando Norris and Daniel Ricciardo 2022</p>
         <hr>
 
@@ -83,7 +83,7 @@
             <li><i> Nevertheless, drop to fourth overall after coming off worse in season-long battle with Ferrari.</i>
             </li>
         </ul>
-        <img src="Mclaren 1-2 Monza 2021.jpeg" width="300" title="MONZA 2021 1-2">
+        <img src="Mclaren1-2Monza2021.jpeg" width="300" title="MONZA 2021 1-2">
         <p>MCLAREN MONZA 2021 1-2</p>
         <hr>
 
@@ -93,7 +93,7 @@
                     Carlos Sainz and Lando Norris both scoring podium finishes.</i></li>
             <li><i> Agree deal to use Mercedes power from 2021.</i></li>
         </ul>
-        <img src="Mclaren 2020.jpeg" width="300" title="Mclaren 2020">
+        <img src="Mclaren2020.jpeg" width="300" title="Mclaren 2020">
         <p>MCLAREN 2020</p>
         <hr>
 
@@ -104,7 +104,7 @@
                     teams.</i></li>
             <li><i>Third place in Brazil marks their first podium in five years.</i></li>
         </ul>
-        <img src="Lando Norris and Carlos Sainz.jpeg" width="300" title="Rookie-LANDO NORRIS with CARLOS SAINZ">
+        <img src="LandoNorrisandCarlosSainz.jpeg" width="300" title="Rookie-LANDO NORRIS with CARLOS SAINZ">
         <p>Rookie-LANDO NORRIS with CARLOS SAINZ</p>
         <hr>
 
@@ -119,4 +119,5 @@
 
 
 </html>
+
 
