--- a/page2.html
+++ b/page2.html
@@ -21,13 +21,13 @@
         <div class="images">
             <div>
                 <a href="https://en.wikipedia.org/wiki/Lando_Norris" target="_blank" title="know more">
-                    <img src="lando norris (2).jpeg" alt="Lando Norris">
+                    <img src="landonorris(2).jpeg" alt="Lando Norris">
                 </a>
                 <p>Lando Norris</p>
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Oscar_Piastri" target="_blank" title="know more">
-                    <img src="Oscar Piastri.jpeg" alt="Oscar Piastri">
+                    <img src="OscarPiastri.jpeg" alt="Oscar Piastri">
                 </a>
                 <p>Oscar Piastri</p>
             </div>
@@ -44,21 +44,21 @@
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Lewis_Hamilton" target="_blank" title="know more">
-                    <img src="lewis hamilton.jpeg" height="300" alt="Lewis Hamilton">
+                    <img src="lewishamilton.jpeg" height="300" alt="Lewis Hamilton">
                 </a>
                 <p>Lewis Hamilton</p>
 
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Fernando_Alonso" target="_blank" title="know more">
-                    <img src="Fernando Alonso McLaren.jpeg" alt="Fernando Alonso">
+                    <img src="FernandoAlonsoMcLaren.jpeg" alt="Fernando Alonso">
                 </a>
                 <p>Fernando Alonso</p>
 
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/James_Hunt" target="_blank" title="know more">
-                    <img src="James Hunt (England) won the 1976 Formula 1 World Championship driving for McLaren.jpeg"
+                    <img src="JamesHunt(England)wonthe1976Formula1WorldChampionshipdrivingforMcLaren.jpeg"
                         alt="James Hunt">
                 </a>
                 <p>James Hunt</p>
@@ -73,14 +73,14 @@
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Niki_Lauda" target="_blank" title="know more">
-                    <img src="niki lauda.jpeg" alt="Niki Lauda">
+                    <img src="nikilauda.jpeg" alt="Niki Lauda">
                 </a>
                 <p>Niki Lauda</p>
 
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Alain_Prost" target="_blank" title="know more">
-                    <img src="download (12).jpeg" alt="Alain Prost">
+                    <img src="download(12).jpeg" alt="Alain Prost">
                 </a>
                 <p>Alain Prost</p>
             </div>
@@ -95,4 +95,5 @@
 
 
 </html>
+
 
