--- a/page2.html
+++ b/page2.html
@@ -37,7 +37,7 @@
         <div class="images">
             <div>
                 <a href="https://en.wikipedia.org/wiki/Ayrton_Senna" target="_blank" title="know more">
-                    <img src="F1.jpeg" alt="Ayrton Senna">
+                    <img src="F1.jpeg" height="300" alt="Ayrton Senna">
                 </a>
                 <p>Ayrton Senna</p>
 
@@ -51,7 +51,7 @@
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Fernando_Alonso" target="_blank" title="know more">
-                    <img src="FernandoAlonsoMcLaren.jpeg" alt="Fernando Alonso">
+                    <img src="FernandoAlonsoMcLaren.jpeg" height="300" alt="Fernando Alonso">
                 </a>
                 <p>Fernando Alonso</p>
 
@@ -59,28 +59,28 @@
             <div>
                 <a href="https://en.wikipedia.org/wiki/James_Hunt" target="_blank" title="know more">
                     <img src="JamesHunt(England)wonthe1976Formula1WorldChampionshipdrivingforMcLaren.jpeg"
-                        alt="James Hunt">
+                         height="300" alt="James Hunt">
                 </a>
                 <p>James Hunt</p>
 
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Carlos_Sainz" target="_blank" title="know more">
-                    <img src="carlos.jpeg" alt="Carlos Sainz">
+                    <img src="carlos.jpeg" height="300" alt="Carlos Sainz">
                 </a>
                 <p>Carlos Sainz</p>
 
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Niki_Lauda" target="_blank" title="know more">
-                    <img src="nikilauda.jpeg" alt="Niki Lauda">
+                    <img src="nikilauda.jpeg" height="300" alt="Niki Lauda">
                 </a>
                 <p>Niki Lauda</p>
 
             </div>
             <div>
                 <a href="https://en.wikipedia.org/wiki/Alain_Prost" target="_blank" title="know more">
-                    <img src="download(12).jpeg" alt="Alain Prost">
+                    <img src="download(12).jpeg"  height="300" alt="Alain Prost">
                 </a>
                 <p>Alain Prost</p>
             </div>
@@ -95,5 +95,6 @@
 
 
 </html>
+
 
 
